# fitness_booking

./: .env.backend.local  .env.backend.sample  .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  howto.deploy.txt
.docker-config/nginx/: api.booking.asmo.su  booking.asmo.su  www.booking.asmo.su
backend/: Dockerfile  pyproject.toml
backend/core/: settings.py  urls.py
backend/fitness/: models.py  serializers.py  urls.py  views.py
backend/fitness/migrations/: 0001_initial.py  0002_fitnesshall_capacity.py  0003_rename_fitnesshall_fitnesshallappointments_fitness_hall.py
backend/fitness/scripts/: fitneshall_add_rooms.py
backend/shared/scripts/: send_email.py
backend/users/: apps.py  models.py  paginations.py  receivers.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  urls_auth.py  urls_many_users.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/scripts/: users_add_staff_user.py
tests/: index.html
